--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -18,14 +18,14 @@
     }
 
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 30%;
         height: 100%;
        
     }
 
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 70%;
         
     }    
@@ -42,15 +42,24 @@
     }
 
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario{
-        float: right;
-        width: 50%;
-        
+        float: left;
+        width: 50%;  
     }
+
+    div#formulario > p{
+        font-size: 2em;
+    }
+
+    div#formulario > p{
+        font-size: 1.2em;
+    }
+    
+    
 }
     
